# mirror-stack-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANCHORING.md  STACK_CANONICAL.md
hooks/: pre-commit.sample
mirror_stack_mcp/: __init__.py  gate.py  ots_anchor.py  server.py  verify.py
tests/: smoke_installed.py  test_auto_resolution_mcp.py  test_gate.py  test_linkage_conformance.py  test_metric_kind_mcp.py  test_server.py  test_verify.py
