[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-stack-mcp"
version = "0.2.2"
description = "Unified MCP server for the Mirror Stack — claims, actions, provenance + verify-all in one server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mother Seara", email = "ruinbl82@gmail.com" }]
dependencies = [
    "mcp>=1.0",
    # Pinned to exact commits for reproducible installs. An unpinned git dep silently
    # tracks each mirror's default branch, so an install made before a mirror's release
    # freezes on whatever was HEAD then and never refreshes — that is how a local install
    # ran stale measure-mirror 0.14.3 long after 0.15.1 landed. Bump these on purpose.
    "measure-mirror @ git+https://github.com/bhyi4/measure-mirror@c1485148ed397b13532e16a827eeca2af6a4cb64",   # v0.24.0 — grounding probes ㉑㉒㉓ + SPEC amendment A1 (optional preregister fields); v0.23.0 seal-time kill_threshold validation; v0.22.1 docs
    "action-mirror @ git+https://github.com/bhyi4/action-mirror@fd46e90c3e3f0706792c261316f4699d7a6799d8",     # v0.1.0 (ledgers conform to MIRROR-SPEC v1.0)
    "provenance-mirror @ git+https://github.com/bhyi4/provenance-mirror@be997bfcba56e415ae87cb1894816378513eeeef",  # v0.1.0 (ledgers conform to MIRROR-SPEC v1.0)
]

[project.optional-dependencies]
# Real Bitcoin anchoring (mm_anchor_bitcoin / _upgrade / _verify). Optional so the core
# install stays light; the OTS tools self-report a clear error if `ots` is missing.
bitcoin = ["opentimestamps-client>=0.7"]
test = ["pytest>=7"]

[project.scripts]
mirror-stack-mcp = "mirror_stack_mcp.server:main"
mirror-stack-verify = "mirror_stack_mcp.verify:main"
mirror-stack-gate = "mirror_stack_mcp.gate:main"

[project.urls]
Homepage = "https://github.com/mirror-stack"

[tool.setuptools]
packages = ["mirror_stack_mcp"]
